Add to variable list